<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">71660136W</string>
    <string name="asig">"Desarrollo de Software para Dispositivos Móviles "</string>
    <string name="btSetFecha">Aceptar</string>
    <string name="cancelActivity">Activity cancelada </string>  
    <string name="fecha">Elegir Fecha:</string>
    <string name="guardar">Guardar</string>
    <string name="help">Ayuda</string>
    <string name="home">NOTES 2013</string>
    <string name="hora">Elegir Hora:</string>
    <string name="imageContentDescription">Imagen de la Universidad de Oviedo</string>
    <string name="logosplash">notes 2013</string>
    <string name="menu_settings">Settings</string>
    <string name="message_header_help">About</string>
    <string name="message_header_text">Aplicación diseñada por Pablo González Jiménez</string>
    <string name="message_header_button">Aceptar</string>
    <string name="name">"Desarrollo de Software para Dispositivos Móviles 2013"</string>
    <string name="nombre">Nombre Asignatura</string>
    <string name="btNotasHoy"></string>
    <string name="btNotasFecha"></string>
    <string name="sinResultados">No se han encontrado notas</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_date">Fecha</string>
    <string name="title_activity_list">Notas</string>
    <string name="tfFecha"></string>
    <string name="notaGuardadaCorrectamente">Nota guardada correctamente</string>
    <string name="verNotas">Ver todas las notas</string>
    <string name="uniovi">Uniovi</string>
    <string name="tfNote"></string>
    <string name="lbTitle">Nota:</string>
    <string name="lbFechaHora1">Fecha de Hoy:</string>
    <string name="lbFechaHora2">Elegir la Fecha y Hora:</string>
    <string name="lbCoord">GeoPosición de la nota:</string>
    <string name="tfCoord"></string>
    <string name="lbImgNote">Añadir Imagen por:</string>
    <string name="tfFechaH"></string>
    <string name="btLoadImg">Teléfono</string>
    <string name="btSpeak"></string>
    <string name="gps">Activar GPS</string>
    <string name="enable">Si</string>
    <string name="disable">No</string>
    <string name="enable_gps_dialog">GPS no está activado. ¿Desea usted activarlo?</string>
    <string name="unknown">--Desconocido--</string>
    <string name="not_support_gps">GPS no se encuentra disponible</string>
    <string name="not_support_network">Red no se encuentra disponible</string>
    <string name="location"></string>
    <string name="image">Imagen de la cámara</string>
    <string name="btCamara">Cámara</string>
    <string name="btSave">Guardar Nota</string>
    <string name="btList">Mostrar Notas</string>
    <string name="exit">Salir</string>
    <string name="errorDataNote">Tiene que introducir algún dato en la nota</string>
    <string name="errorDataDate">Tiene que introducir algún dato en alguna de las fechas</string>    
    
</resources>